# monOS

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  rust-toolchain.toml  x86_64-monos_user.json
.cargo/: config.toml
font_gen/: Cargo.toml
font_gen/fonts/: cozette.bdf  glean.bdf  haeberli12.bdf
font_gen/src/: characters.txt  main.rs
monodoc/: Cargo.toml
monodoc/src/: ast.rs  lib.rs  parse.rs
monodoc/tests/: test.md
monos_gfx/: Cargo.toml
monos_gfx/assets/: paint_splashes.aseprite  splash_1.pbm  splash_3.pbm  taskbar.aseprite  test_palette.aseprite
monos_gfx/src/: framebuffer.rs  input.rs  lib.rs  paint.rs  types.rs
monos_gfx/src/fonts/: cozette.rs  mod.rs
monos_gfx/src/gui/: mod.rs
monos_gfx/src/image/: mod.rs  netpbm.rs  pbm.rs
monos_gfx/src/text/: lines.rs  mod.rs
monos_gfx/src/text/font/: cozette.rs  glean.rs  haeberli.rs  mod.rs
monos_gfx/src/ui/: mod.rs
monos_gfx/src/ui/widgets/: button.rs  label.rs  mod.rs  textbox.rs
monos_kernel/: Cargo.toml
monos_kernel/assets/: boot_logo.aseprite  boot_logo.ppm
monos_kernel/src/: core_local.rs  framebuffer.rs  gdt.rs  lib.rs  main.rs  process.rs  serial.rs  syscall.rs  test_main.rs
monos_kernel/src/acpi/: mod.rs  rsdp.rs  sdt.rs
monos_kernel/src/acpi/tables/: hpet.rs  madt.rs  mod.rs
monos_kernel/src/arch/: registers.rs
monos_kernel/src/dev/: hpet.rs  keyboard.rs  mod.rs  mouse.rs
monos_kernel/src/fs/: fat16.rs  mod.rs  ramdisk.rs  vfs.rs
monos_kernel/src/fs/fat16/: allocation_table.rs  dir_entry.rs  file.rs  mod.rs  node.rs
monos_kernel/src/gdt/: gdt.rs  mod.rs  registers.rs  tss.rs
monos_kernel/src/gfx/: framebuffer.rs  mod.rs  types.rs
monos_kernel/src/gfx/fonts/: mod.rs
monos_kernel/src/interrupts/: handlers.rs  idt.rs  mod.rs
monos_kernel/src/interrupts/apic/: io_apic.rs  local_apic.rs  mod.rs  pic.rs
monos_kernel/src/interrupts/mem/: mod.rs
monos_kernel/src/mem/: address.rs  alloc.rs  alloc_heap.rs  alloc_vmem.rs  mod.rs
monos_kernel/src/mem/paging/: frame.rs  frame_allocator.rs  mapper.rs  mapping.rs  mod.rs  page.rs  page_table.rs  pat.rs
monos_kernel/src/process/: messaging.rs  mod.rs
monos_kernel/src/syscall/: fs.rs  gfx.rs  io.rs  ipc.rs  mod.rs  os.rs  process.rs
monos_kernel/src/utils/: bit_array.rs  bit_field.rs  mod.rs
monos_std/: Cargo.toml
monos_std/src/: io.rs  lib.rs  memory.rs  messaging.rs  syscall.rs
monos_std/src/dev/: keyboard.rs  mouse.rs
monos_std/src/filesystem/: mod.rs  path.rs
monos_std/src/fs/: mod.rs  path.rs
monos_std/src/syscall/: fs.rs  gfx.rs  io.rs  mod.rs
monos_std/src/syscall/calls/: fs.rs  ipc.rs  os.rs  process.rs
monos_test/: Cargo.toml
monos_test/derive/: Cargo.toml
monos_test/derive/src/: lib.rs
monos_test/src/: lib.rs
monoscript/: Cargo.toml  README.md
monoscript/src/: ast.rs  execute.rs  interface.rs  interpret.rs  lib.rs  main.rs  parse.rs  repl.rs
monoscript_emu/: Cargo.toml
monoscript_emu/examples/basic/: basic.ms  main.rs
monoscript_emu/examples/function/: function.ms  main.rs
monoscript_emu/examples/input/: input.ms  main.rs
monoscript_emu/examples/window/: main.rs  window.ms
monoscript_emu/src/: key.rs  lib.rs  main.rs
os_disk/data/: task.ppm
os_disk/data/icons/: ms.ppm  term.ppm  test.ppm
os_disk/home/: taskbar.ppm  welcome.md
os_disk/home/desktop/: 2_windows.ms  doom  term  test
os_disk/home/monoscript/: 3_func.ms  4_input.ms
src/: main.rs
userspace/bye_world/: Cargo.toml
userspace/bye_world/src/: main.rs
userspace/doom/: Cargo.toml  build.rs
userspace/doom/libc/: libc.c
userspace/doom/libc/include/: stdarg.h  stddef.h  stdint.h  stdio.h  string.h
userspace/doom/src/: libc.rs  main.rs
userspace/doom/src/libc/: io.rs  mem.rs  string.rs
userspace/hello_world/: Cargo.toml
userspace/hello_world/src/: main.rs
userspace/rooftop/: Cargo.toml  README.md
userspace/rooftop/assets/: taskbar.aseprite  test_ico.ppm  test_palette.aseprite
userspace/rooftop/src/: desktop.rs  lib.rs  main.rs  paint.rs  toolbar_cibo.rs  windowing.rs
userspace/rooftop/src/desktop/: desktop_entries.rs
userspace/rooftop/src/toolbar_cibo/: speech_widget.rs
userspace/rooftop/src/windowing/: client.rs  server.rs
userspace/terminal/: Cargo.toml
userspace/terminal/assets/: icon.aseprite  ms_icon.aseprite
userspace/terminal/src/: main.rs  repl.rs  script.rs
