[package]
name = "monos"
version = "0.1.0"

[build-dependencies]
bootloader = "0.11"
bootloader-boot-config = "0.11"

glob = "0.3.1"
fatfs = "0.3.6"

monos_kernel = { path = "monos_kernel", artifact = "bin", target = "x86_64-unknown-none" }
monoscript = { path = "monoscript", artifact = "bin:mono", target = "x86_64-unknown-none" }

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = [ "font_gen", "monos_kernel", "monos_std", "monoscript", "monoscript_emu", "userspace/*"]

resolver = "2"

