[package]
name = "monos"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bootloader = { git = "https://github.com/Fisch03/monOS-bootloader" }
bootloader-boot-config = "0.11"

glob = "0.3.1"
fatfs = "0.3.6"

monos_kernel = { path = "monos_kernel", artifact = "bin", target = "x86_64-unknown-none" }
monoscript = { path = "monoscript", artifact = "bin:mono", target = "x86_64-unknown-none" }

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
resolver = "2"
members = [ "monos_gfx", "monos_kernel", "monos_std", "monoscript", "userspace/*"]
exclude = [ "monoscript_emu", "font_gen" ]
