[package]
name = "monodoc"
version = "0.1.0"
edition = "2021"

[dependencies]
monoscript = { path = "../monoscript" }
monos_gfx = { path = "../monos_gfx", default-features = false }
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
nom_locate = { version = "4.2.0", default-features = false }
hashbrown = { version = "0.14.5", default-features = false, features = ["inline-more"] }