[package]
name = "monos_gfx"
version = "0.1.0"
edition = "2021"

[dependencies]
monos_std = { path = "../monos_std" }
#monos_std = { path = "../monos_std", features = ["lib_only"] }
spin = "0.9.8"
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[features]
default = []
lib_only = ["monos_std/lib_only"]
serde = ["dep:serde"]

