[package]
name = "monos_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11"
# linked_list_allocator = "0.10.5"
object = { version = "0.36.0", default-features = false, features = ["read"] }
pc-keyboard = "0.7.0"
spin = "0.9.8"
uart_16550 = "0.3.0"
x86_64 = "0.15.1"
monos_gfx = { path = "../monos_gfx" }
monos_std = { path = "../monos_std", features = ["lib_only"] }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
buddy_system_allocator = "0.9.1"
