[package]
name = "monos_std"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
linked_list_allocator = "0.10.5"
num_enum = { version = "0.7.2", default-features = false }
volatile = "0.6.1"


[features]
default = ["userspace"]

# enables all monOS userspace specific features (e.g. syscalls, allocator). without this flag set, the crate is cross-platform compatible (and usable from the kernel)
userspace = [] 
