[package]
name = "monoscript"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mono"
path = "src/main.rs"

[dev-dependencies]
monoscript_emu = {path = "../monoscript_emu" }

[dependencies]
hashbrown = "0.14.5"
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
nom_locate = { version = "4.2.0", default-features = false }
