[package]
name = "monoscript"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = { version = "0.14.5", default-features = false, features = ["inline-more"] }
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
nom_locate = { version = "4.2.0", default-features = false }
rustc-hash = { version = "2.0.0", default-features = false }
