[package]
name = "rooftop"
version = "0.1.0"
edition = "2021"

[dependencies]
monos_std = { path = "../../monos_std" }
monos_gfx = { path = "../../monos_gfx" }
num_enum = { version = "0.7.2", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }

[features]
default = []
client = []
